clusters/apps/env/production/home/homepage/kat/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`kat.${FAMILY_DOMAIN}`)"
      middlewares:
        - name: oauth-auth
          namespace: auth-system
        - name: oauth-errors
          namespace: auth-system
      priority: 10
      services:
        - name: homepage-kat
          port: 3000
    - kind: Rule
      match: "Host(`kat.${FAMILY_DOMAIN}`) && PathPrefix(`/oauth2/`)"
      priority: 15
      middlewares:
        - name: oauth-headers
          namespace: auth-system
      services:
        - name: google-auth-oauth2-proxy
          namespace: auth-system
          port: 80
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: kat.${FAMILY_DOMAIN}
